2007-12-09  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Fix pr-interface-map initialization.  Replace
	pr-f-set-keymap-parents, pr-f-set-keymap-name and pr-f-read-string by
	pr-set-keymap-parents, pr-set-keymap-name and pr-read-string,
	respectively.
	(pr-version): New version 6.9.3.
	(pr-interactive-n-up, pr-interactive-regexp): Code fix.

2007-12-09  Glenn Morris  <rgm@gnu.org>

	* emulation/viper-init.el (top-level): Use dolist rather than mapc
	in make-variable-frame-local call.

2007-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* mail/hashcash.el (declare-function):
	* net/imap.el (declare-function): New no-op macro for backward
	compatibility.

2007-12-08  Eli Zaretskii  <eliz@gnu.org>

	Sync makefile.w32-in with Makefile.in.

	* makefile.w32-in (check-declare): New target.
	(BYTE_COMPILE_EXTRA_FLAGS): New variable.
	(.el.elc, compile-CMD, compile-SH, compile-always-CMD)
	(compile-always-SH, compile-calc-CMD, compile-calc-SH)
	($(lisp)/progmodes/cc-mode.elc): Use it.
	($(lisp)/progmodes/cc-mode.elc): New rule.

2007-12-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* indent.el (tab-stop-list): Mark as safe-local-variable.

	* generic-x.el (etc-sudoers-generic-mode): New mode.
	(generic-unix-modes): Add it.

2007-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-hash-table=): Remove function.  We cannot
	apply wildcards in a hash table key; there is no usable hash code
	then.
	(dbus-registered-functions-table): Use `equal' as test function.
	(dbus-name-owner-changed-handler): Rewrite due to new hash table
	structure.

2007-12-08  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/cc-cmds.el (c-mask-paragraph): Avoid invalid search
	bound error in block comment branch.

2007-12-08  David Kastrup  <dak@gnu.org>

	* textmodes/reftex.el (reftex-select-with-char):
	* textmodes/reftex-toc.el (reftex-toc-do-promote)
	(reftex-toc-visit-location, reftex-toc-find-section):
	* textmodes/reftex-index.el (reftex-index-show-entry):